--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "type": "git"
   },
   "author": "Curtis Rodgers",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bluebird": "^3.4.6",
+    "request": "^2.75.0"
+  }
 }
